force-app/main/default/objects/Kinetic_Form_Question__c/Kinetic_Form_Question__c.object-meta.xml
<CustomObject>
    <label>Template Question</label>
    <nameField>
        <displayFormat>KSQ-{0000000}</displayFormat>
        <label>Template Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>