force-app/main/default/objects/Kinetic_Form_Question__c/fields/Kinetic_Form__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Form__c</fullName>
    <label>Kinetic Form</label>
    <referenceTo>Kinetic_Form__c</referenceTo>
    <relationshipName>Kinetic_Form_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>