force-app/main/default/objects/Kinetic_Form_Question__c/fields/Kinetic_Question__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Question__c</fullName>
    <label>Kinetic Question</label>
    <referenceTo>Kinetic_Question__c</referenceTo>
    <relationshipName>Kinetic_Form_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>