force-app/main/default/objects/Kinetic_Form_Question__c/fields/Option_Score__c.field-meta.xml
<CustomField>
    <fullName>Option_Score__c</fullName>
    <description>Hold score for each option</description>
    <inlineHelpText>Hold score for each option</inlineHelpText>
    <label>Option Score</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>