force-app/main/default/objects/Kinetic_Form_Question__c/fields/Question_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Help_Text__c</fullName>
    <description>Specify help text to show when this question is opened</description>
    <inlineHelpText>Specify help text to show when this question is opened</inlineHelpText>
    <label>Question Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>