force-app/main/default/objects/Kinetic_Form_Question__c/fields/Score_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Score_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Score Confirmed?</label>
    <type>Checkbox</type>
</CustomField>